# switchbitcoin

./: .gitignore  BUILDING.md  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
docs/: BUG-REPORT-TEMPLATE.md  CRYPTOGRAPHER_REVIEW_PACKET.md  TESTER-GUIDE.md  params-governance.md  reorg-audit.md  role-csv-precommitment.md
docs/artifacts/: manifest-v2-round-2026-07-18.md  manual-run-2026-07-13.txt  regtest-e2e-2026-07-20.txt  regtest-run-2026-07-13.txt  role-csv-rate-2026-07-13.txt  soak-2026-07-19.md  swap-proof-2026-07-20.md  tester-round-1.md  testnet4-leg1-2026-07-14.md  testnet4-leg2-2026-07-16.md  ui-polish-2026-07-15.md
docs/manifests/: v1-params.toml  v1.manifest  v2-params.toml  v2.manifest  v3-params.toml  v3.manifest
fuzz/: Cargo.toml
fuzz/fuzz_targets/: wire_parse.rs
scripts/: build-release.sh
src/: chain.rs  lib.rs
src/chain/: bitcoind.rs  mod.rs  policy.rs
src/crypto/: adaptor.rs  mod.rs  storage.rs  validate.rs
src/settlement/: mod.rs  params.rs  refund.rs  state_machine.rs
src/signing/: mod.rs
src/tx/: backstop.rs  escrow.rs  mod.rs  setup.rs  txbuild.rs
src/wallet/: abort_hygiene.rs  api.rs  app.rs  backstop_driver.rs  backup.rs  claim_scheduler.rs  config.rs  driver.rs  engine.rs  fee_weather.rs  funding_driver.rs  keys.rs  keystore.rs  ledger.rs  manifest.rs  mod.rs  orchestrator.rs  recovery_driver.rs  reorg.rs  runner.rs  runtime.rs  store.rs  ticket.rs  transport.rs  watch.rs  watchtower_driver.rs
src/wire/: mod.rs
tests/: api.rs  app.rs  backstop_bump.rs  backup.rs  claim_scheduler.rs  cli.rs  engine.rs  failure_checklist.rs  funding_driver.rs  hostile_inputs.rs  keystore.rs  manifest_tool.rs  onboarding.rs  orchestrator.rs  recovery_driver.rs  regtest_e2e.rs  runner.rs  taproot_swap.rs  ticket.rs  transport_swap.rs  wallet.rs  wallet_store.rs  watch.rs  wire_totality.rs
