[package]
name = "switchbitcoin"
# 0.1.0 = the pre-alpha tester release line (Task 20). The full provenance
# string a tester reports is version + git short hash — see build.rs and
# `switchbitcoin-cli --version`.
version = "0.1.0"
edition = "2021"
description = "SwitchBitcoin Protocol (formerly Swap Key) — settlement-core reference scaffold (v3.16 lineage). NOT production. Fill against real libsecp256k1-zkp."
license = "MIT OR Apache-2.0"
publish = false

# ---------------------------------------------------------------------------
# PINNED CRYPTO (v3.16 Requirement 1 — no hand-rolling).
# MuSig2 + adaptor signatures + nonce generation MUST come from libsecp256k1-zkp.
# `musig2` (conduition) defaults to libsecp256k1 bindings for curve math and
# exposes adaptor-signature APIs. `secp256k1` gives BIP340 / point validation.
# Do NOT add a pure-Rust curve backend for anything touching real funds.
# ---------------------------------------------------------------------------
[dependencies]
# Versions verified against crates.io 2026-07-06. musig2 0.4 pins secp256k1 0.31,
# so secp256k1 0.31 is THE canonical curve-math type set for the validation gate.
# NOTE: bitcoin 0.32.101 (current latest) internally uses secp256k1 0.29 — keys/
# sigs crossing into `bitcoin` tx types go via byte serialization, never by
# re-interpreting one crate's types as the other's.
secp256k1 = { version = "0.31", features = ["rand", "global-context"] }
# Backend made EXPLICIT (Req 1): libsecp256k1 bindings, never the pure-Rust k256.
musig2 = { version = "0.4", default-features = false, features = ["secp256k1", "rand"] }
# secp is musig2's own scalar/point type family (Scalar, Point, MaybeScalar, G).
# It does NO curve math itself — with the secp256k1 feature it delegates to
# libsecp256k1 (verified in the 2026-07-06 pin audit), so Req 1 holds.
secp = { version = "0.7", default-features = false, features = ["secp256k1", "rand"] }
bitcoin = { version = "0.32" }                     # Taproot/BIP341, PSBT, tx types
rand = "0.9"                                       # matches secp256k1 0.31 / musig2 0.4 rand dep
thiserror = "2"
zeroize = { version = "1", features = ["derive"] } # scrub secret nonces from memory (INV-1)
# At-rest storage encryption (v3.13 Phase 3: AES-256-GCM under an HKDF-derived
# TEK). These are SYMMETRIC storage crypto, NOT the curve math Req 1 pins — that
# still comes only from libsecp256k1 via musig2/secp.
aes-gcm = "0.10"                                   # AES-256-GCM AEAD, unique 96-bit nonces
hkdf = "0.12"                                      # TEK = HKDF-SHA256(platform key, swap_session_id)
sha2 = "0.10"                                      # HKDF hash
# Software key custody (Task 06 — pre-alpha SOFTWARE store, NOT enclave custody).
# bip39: mnemonic <-> seed only (hashing, no curve math). BIP32 derivation comes
# from the `bitcoin` crate already pinned above. pbkdf2: passphrase -> KEK for
# the at-rest seed sealing (symmetric KDF, Req 1 untouched).
bip39 = { version = "2", features = ["zeroize"] }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }

# --- feature "bitcoind" (real-node chain backend; NOT part of the core) ------
# Gated so the default build (and the windows-gnu test suite) carries no HTTP
# client. These are transport/serialization only — no curve math (Req 1 holds).
serde_json = { version = "1", optional = true }                      # JSON-RPC bodies
ureq = { version = "2", default-features = false, optional = true }  # plain-HTTP RPC to a LOCAL node (no TLS on localhost)
base64 = { version = "0.22", optional = true }                       # HTTP basic-auth header
# NFC normalization of user-TYPED passphrases at the binaries' input boundary
# (Task 07 contract: `Wallet::open` receives the normalized form so the same
# visual passphrase always unseals the keystore across OSes/IMEs). Pure Rust
# tables, no crypto — Req 1 untouched. Binary-only, but NON-optional since
# Task 18: `switchbitcoin-manifest` (no required-features, so it builds in the
# default suite) applies the same normalization to the operator passphrase.
unicode-normalization = "0.1"

[features]
# Real Bitcoin Core JSON-RPC chain backend (src/chain/bitcoind.rs) for
# regtest/testnet. Off by default; the runner binary (Task 08) turns it on.
bitcoind = ["dep:serde_json", "dep:ureq", "dep:base64"]

# The runnable wallet (Task 08). required-features keeps the default
# windows-gnu suite HTTP-client-free: `cargo test` never builds the binary;
# build/run it with `--features bitcoind`.
[[bin]]
name = "switchbitcoin-cli"
path = "src/bin/switchbitcoin-cli.rs"
required-features = ["bitcoind"]

# Manifest issuance ops tooling (Task 18, DECISION 1): the ONLY binary that
# ever touches the operator secret (keygen/sign/reseal; compose-check and
# inspect are secret-free). Deliberately NO required-features — signing needs
# only core deps, so the default suite builds it and runs its tests. The
# wallet binary above has NO operator-key input path by construction.
[[bin]]
name = "switchbitcoin-manifest"
path = "src/bin/switchbitcoin-manifest.rs"

[dev-dependencies]
proptest = "1"
tempfile = "3"
# The regtest E2E harness (tests/regtest_e2e.rs, #[ignore]) speaks raw
# JSON-RPC to the bitcoind it spawns; test-only, not a crate dependency.
serde_json = "1"
# For the taproot integration test: build escrows + verify completed sigs on the
# bitcoin (secp256k1 0.29) side. Same version the tx layer uses.
bitcoin = "0.32"
musig2 = { version = "0.4", default-features = false, features = ["secp256k1", "rand"] }
secp = { version = "0.7", default-features = false, features = ["secp256k1", "rand"] }
rand = "0.9"

# Fuzzing lives in ./fuzz (cargo-fuzz). Wire parser MUST be fuzzed from commit one
# (v3.16 Requirement 4). See fuzz/fuzz_targets/wire_parse.rs.

[profile.release]
overflow-checks = true    # keep integer overflow checks on even in release for money code
