[package]
name = "swapkey-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

# Standalone package by convention (cargo-fuzz): the empty table keeps any
# future parent [workspace] from trying to absorb this crate.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.swapkey]
path = ".."

[[bin]]
name = "wire_parse"
path = "fuzz_targets/wire_parse.rs"
test = false
doc = false
